option('build_profile', type: 'combo',choices: ['release', 'debug', 'dev', 'fasttest', 'custom', 'hunt'],value: 'release',description: 'Build profile: release/debug - ggdb3 O0, debug adds ASAN; dev - O3 + TEST_BUILD; fasttest - Ofast + TEST_BUILD; custom - no specific flags; hunt - как release + _FORTIFY_SOURCE=2 (дешёвый ловец переполнений буферов)')

option('linker', type: 'string', value: '', description: 'Linker to use: gold, mold, lld, bfd, or empty for system default')
option('build_tests', type: 'boolean', value: true, description: 'Build and run tests.')
option('nocrypt', type: 'boolean', value: false, description: 'Disable use of crypt()')
option('has_epoll', type: 'boolean', value: true, description: 'Use epoll (Linux or freebsd)')
option('scripting', type: 'boolean', value: false, description: 'Enable scripting support (Python + Boost.Python)')
option('sol2_root', type: 'string', value: '', description: 'Optional path to sol2 root for luajit_prototype; empty uses Meson dependency/fallback')
option('with_asan', type: 'boolean', value: false, description: 'Build with Address Sanitizer')
option('use_pch', type: 'boolean', value: true, description: 'Use precompiled headers for circle.library')

# Options for Admin API and Web features
option('admin_api', type: 'boolean', value: false, description: 'Enable Admin API and JSON-related features')

# World Data Setup
option('small_world', type: 'boolean', value: false, description: 'Copy data in small world')
option('full_world_path', type: 'string', value: '', description: 'Absolute path to the full world data for symlinking')

# Options for libfort
option('fort_wchar', type: 'boolean', value: false, description: 'Enable wchar support in libfort')
option('fort_utf8', type: 'boolean', value: true, description: 'Enable UTF-8 support in libfort')
option('fort_test', type: 'boolean', value: false, description: 'Export internal symbols for testing')

option('fmt', type: 'combo', choices: ['auto', 'system', 'builtin'], value: 'builtin', description: 'fmt library source (mandatory)')
option('gtest', type: 'combo', choices: ['auto', 'system', 'builtin'], value: 'builtin', description: 'GTest library source (used when build_tests is enabled)')
option('zlib', type: 'combo', choices: ['auto', 'system', 'builtin', 'disabled'], value: 'auto', description: 'Enable MCCP support via ZLib')
option('iconv', type: 'combo', choices: ['auto', 'system', 'builtin', 'disabled'], value: 'disabled', description: 'Detect and use iconv')
option('telegram', type: 'combo', choices: ['auto', 'system', 'builtin', 'disabled'], value: 'disabled', description: 'Enable Telegram integration (requires CURL + OpenSSL)')
option('luajit', type: 'combo', choices: ['auto', 'system', 'builtin', 'disabled'], value: 'disabled', description: 'Enable optional sol2 + LuaJIT prototype')
option('boost', type: 'combo', choices: ['auto', 'system', 'builtin', 'disabled'], value: 'disabled', description: 'Enable Boost usage')
option('sqlite', type: 'combo', choices: ['auto', 'system', 'builtin', 'disabled'], value: 'disabled', description: 'Enable SQLite world data source')
option('yaml', type: 'combo', choices: ['auto', 'system', 'builtin', 'disabled'], value: 'builtin', description: 'Enable YAML world data source and dictionary loader (default format; lib.template ships YAML)')
option('otel', type: 'combo', choices: ['auto', 'system', 'builtin', 'disabled'], value: 'disabled', description: 'Enable OpenTelemetry support for tracing and metrics')
